--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-    <p th:text="${message}"></p>
-    <a href="/load">Load data</a>
+    <p th:text="${error}"></p>
+    <a href="#">Restart</a>
 </body>
 </html>
